--- a/data/org.sugarlabs.MusicBlocks.ui
+++ b/data/org.sugarlabs.MusicBlocks.ui
@@ -8,6 +8,7 @@
     <property name="enable_accelerated_2d_canvas">True</property>
     <property name="allow_file_access_from_file_urls">True</property>
     <property name="allow_universal_access_from_file_urls">True</property>
+    <property name="hardware-acceleration-policy">WEBKIT_HARDWARE_ACCELERATION_POLICY_ALWAYS</property>
   </object>
   <template class="MyWindow" parent="GtkWindow">
     <property name="can_focus">False</property>
